--- a/pom.xml
+++ b/pom.xml
@@ -28,5 +28,11 @@
       <version>5.9</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.10.1</version>
+    </dependency>
+
   </dependencies>
 </project>
